# tauri-plugin-serialport

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.changes/: config.json  readme.md
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.tsx
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: main.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs
webview-dist/: index.js
webview-src/: index.ts  rollup.config.js  tsconfig.json
