[package]
name = "tauri-plugin-serialport"
version = "4.0.0"
authors = [ "47vigen" ]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-serialport"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
serialport = "4.7.1"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
